--- a/mysql-replica/master/conf/master.conf
+++ b/mysql-replica/master/conf/master.conf
@@ -1,10 +1,10 @@
 [mysqld]
-log_bin                     = mysql-bin
+log-bin                     = mysql-bin
 binlog_format               = ROW
 gtid_mode                   = ON
 enforce-gtid-consistency    = true
 server-id                   = 10
-log_slave_updates
+log-slave-updates           = 1
 datadir                     = /var/lib/mysql
 socket                      = /var/lib/mysql/mysql.sock
 
@@ -35,4 +35,3 @@ collation-server = utf8mb4_unicode_ci
 slow_query_log              = 1
 slow_query_log_file         = /var/log/mysql/mysql-slow.log
 long_query_time             = 1
-
